@@ -130,6 +130,10 @@ encodingDetectors=BOM XML-PI html python
 
 #}}}
 
+# The critical size, over it a buffer will prompt when setting the edit mode
+# to switch to context insensitive or default mode
+largeBufferSize=4000000
+
 #{{{ Buffer settings
 # These can also be specified as buffer-local properties
 
